# Smart-Knob-Rb

./: README.md  lv_conf.h  联网逻辑.rp
2.Fimeware/: config.html
2.Fimeware/src/: display.cpp  interface_task.cpp  main.h  util.h
2.Fimeware/src/Basic/: Common.cpp  Common.h
2.Fimeware/src/GUI/: DisplayAppWin.cpp  DisplayPage.cpp  DisplayPrivate.h
2.Fimeware/src/Hal/: BSP.h  Ble_Keyboard.h  Page_html.h  Wifi_Interface.cpp  Wifi_Interface.h  flash_fs.cpp  flash_fs.h  motor.cpp  motor.h
2.Fimeware/src/Image/: IMG_OTA.c  IMG_Pressure.c  IMG_Prev_Mc.c  IMG_Swback.c  IMG_WIFI.c
2.Fimeware/src/Page/: Page_Anim.cpp  Page_Smart.cpp  Page_StartUp.cpp  spectrum_11.h
3.Software/lv_port_pc_eclipse/: Makefile  lv_conf.h
3.software/lv_port_pc_eclipse/: lv_drv_conf.h
Fimeware/: platformio.ini
Fimeware/Smart-Knob-Rb/: platformio.ini
Fimeware/src/: display.cpp  interface_task.cpp  interface_task.h  main.cpp  task.h
software/lv_port_pc_eclipse/: CMakeLists.txt  lv_conf.h  main.cpp
software/lv_port_pc_eclipse/smart-knob/Font/: HandGotn_14.c  HandGotn_26.c  HandGotn_35.c
software/lv_port_pc_eclipse/smart-knob/GUI/: DisplayAppWin.cpp  DisplayPage.cpp
software/lv_port_pc_eclipse/smart-knob/Image/: IMG_Back.c  IMG_Music.c  IMG_Music_GIF.c  IMG_Play_Mc.c  IMG_Return.c  IMG_Smart.c  IMG_Switch.c  IMG_Water_BG.c
software/lv_port_pc_eclipse/smart-knob/Page/: Page_Anim.cpp  Page_MainMenu.cpp  Page_Music.cpp  Page_OTA.cpp  Page_Smart.cpp  Page_StartUp.cpp  Page_Switch.cpp  Page_Window.cpp
software/lv_port_pc_eclipse/smart-knob/Utils/lv_ext/: lv_obj_ext_func.h
(+80 files in other folders)
